# cbc_design_MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  Procfile  README.md  app.json  chatgpt_cbc_mcp_wrapper.md  chatgpt_mcp_wrapper.py  chatgpt_wrapper_README.md  claude_connection.txt  claude_desktop_config.json  claude_desktop_setup.md  cursor_mcp_setup.md  deploy_heroku.py  mcp_config.json  planning.md  prd.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_claude_desktop.py  start_server.py  stdin.txt  task.md  task_mcpwrapper.md  test_http_server.py  test_mcp_connection.py
docs/: algorithms.md  api.md  chatgpt_mcp_quick_reference.md  chatgpt_mcp_wrapper_guide.md  chatgpt_quickstart.md  chatgpt_troubleshooting.md  claude_desktop_connection.md  claude_quickstart.md  deployment.md  example_prompts.md  examples.md  local_setup.md  quick_start_guide.md  troubleshooting.md  user_guide.md
scripts/: interactive_tester.py  local_test_suite.py  performance_monitor.py  sample_scenarios.py  send_rpc.py  test_doptimal.py  test_export.py  test_optimize.py
src/conjoint_mcp/: http_server.py  mcp_server.py  mcp_server_v2.py  server.py
tests/integration/: test_design_generate.py  test_doptimal_endpoint.py  test_end_to_end.py  test_export_endpoint.py  test_optimize_endpoint.py  test_stdio_server.py
tests/unit/: test_algorithm_accuracy.py  test_balanced_orthogonal.py  test_constraints.py  test_doptimal.py  test_errors.py  test_export.py  test_health.py  test_logging.py  test_models.py  test_optimization.py  test_performance.py  test_random_algorithm.py
(+21 files in other folders)
