[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conjoint-mcp-server"
version = "0.1.0"
description = "Choice Based Conjoint Design Generator MCP Server"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Avik Halder"}]
dependencies = [
  "mcp>=1.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0",
  "scipy>=1.11.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.23.0",
  "hypothesis>=6.88.0",
  "black>=24.4.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]

[project.scripts]
conjoint-mcp = "conjoint_mcp.server:main"


